--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -134,6 +134,8 @@ supertuxkart_SOURCES = \
  graphics/stars.hpp \
  graphics/sun.hpp \
  graphics/sun.cpp \
+ graphics/water.hpp \
+ graphics/water.cpp \
  graphics/wind.hpp \
  graphics/wind.cpp \
  guiengine/CGUISpriteBank.cpp \
